--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
