--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "tiny-invariant": "^1.3.3",
+    "usehooks-ts": "^3.1.0",
     "valibot": "^0.42.1"
   },
   "devDependencies": {
