--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "drizzle-orm": "^0.33.0",
     "isbot": "^4.1.0",
     "postgres": "^3.4.4",
+    "psl": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.12.1",
     "@types/better-sqlite3": "^7.6.11",
+    "@types/psl": "^1.1.3",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
