--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "psl": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "tiny-invariant": "^1.3.3",
     "usehooks-ts": "^3.1.0",
