--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "swiper": "^11.1.14",
     "tiny-invariant": "^1.3.3",
     "usehooks-ts": "^3.1.0",
     "valibot": "^0.42.1"
