--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "valibot": "^0.42.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.9",
     "@remix-run/dev": "^2.12.1",
     "@types/better-sqlite3": "^7.6.11",
     "@types/psl": "^1.1.3",
