improve docker image and implement db migrations

--- a/fly.toml
+++ b/fly.toml
@@ -8,19 +8,18 @@ primary_region = 'sin'
 
 [build]
 
-[[mounts]]
-  source = 'data'
-  destination = '/data'
+[deploy]
+release_command = "npm run migrate"
 
 [http_service]
-  internal_port = 3000
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 3000
+force_https = true
+auto_stop_machines = 'stop'
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
 
 [[vm]]
-  memory = '2gb'
-  cpu_kind = 'shared'
-  cpus = 2
+memory = '2gb'
+cpu_kind = 'shared'
+cpus = 2
