--- a/fly.toml
+++ b/fly.toml
@@ -1,7 +1,4 @@
-# fly.toml app configuration file generated for shopat-bio on 2024-09-28T22:01:14+05:30
-#
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
 
 app = 'shopat-bio'
 primary_region = 'sin'
@@ -14,7 +11,7 @@ release_command = "npm run migrate"
 [http_service]
 internal_port = 3000
 force_https = true
-auto_stop_machines = 'stop'
+auto_stop_machines = 'suspend'
 auto_start_machines = true
 min_machines_running = 0
 processes = ['app']
