--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
     "accept-language": "^3.0.20",
+    "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.3.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "isbot": "^4.1.0",
+    "nanoid": "^5.0.7",
     "postgres": "^3.4.4",
     "psl": "^1.9.0",
     "react": "^18.2.0",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.12.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.11",
     "@types/psl": "^1.1.3",
     "@types/react": "^18.2.20",
